--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon major fa-cloud"></span>
-					<h1>Hi, I'm <strong>Liz Chen</strong>.<br />Welcome to my website :)</h1>
+					<h1>Hi, I'm <strong>Di Wu</strong>.<br />Welcome to my website</h1>
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">Continue</a></li>
 					</ul>
@@ -39,7 +39,7 @@
 
 
 							<span class="image fit"><img src="images/me.jpeg" alt="" /></span>
-							<a href="https://www.dropbox.com/s/q2nd8g2qp3hnh06/Liz_Chen.pdf?dl=0" target="_blank">
+							<a href="https://www.dropbox.com/home?preview=Di+Wu_UTD.pdf" target="_blank">
 								<u><center><h3>Download Resume</h3></center></u>
 							</a>
 						</div>
@@ -48,24 +48,15 @@
 								<h2>About Me</h2>
 							</header>
 							<p>
-								Hi, this is Liz!
+								Hi, I am Di Wu. 
 							</p>
-							<p>I'm a Data Scientist with previous experience in consulting and banking industry.
+							<p>I'm a Data Scientist with previous experience in banking industry.
 								I am passionate to wrestle with complex data and apply machine learning to tell stories
 								and solve business problems.
 							</p>
-							<p>
-								I will soon graduate from my
-								<b><a href="https://www.usfca.edu/arts-sciences/graduate-programs/data-science" target="_blank">Master's of Science in Data Science (MSDS)</a></b>
-								at the University of San Francisco, where I have developed a strong programming
-								and statistics skill set that can tackle business problems involving big data.
-							</p>
+						
 
-							<p>
-								As a Data Scientist at <b><a href="https://www.wiser.com/" target="_blank">Wiser Solution</a></b> , my primary role is to
-								help my client boost revenue and optimize pricing strategy with predictive modeling techniques and machine
-								learning algorithms.
-							</p>
+						
 
 							<p>
 								In the following part, I'd like to share some of my projects I completed so far that I found interesting.
