--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
 						<h2>Stay Connected</h2>
 					</header>
 					<ul class="icons">
-					<li><a href="https://github.com/YimeiChen" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto: lizchenym@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-					<li><a href="https://www.facebook.com/profile.php?id=100004396293062" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://github.com/anthoning" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto: utd.diwu@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					
 				</ul>
 				</div>
 			</section>
@@ -259,7 +259,7 @@
 			<section id="footer">
 
 				<ul class="copyright">
-					<li>&copy; Liz Chen</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Di Wu</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
