--- a/index.html
+++ b/index.html
@@ -5,6 +5,37 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 
+<html>
+	<head>
+		<title>Di Wu</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-118590596-1');
+</script>
+	<script>function utmx_section(){}function utmx(){}(function(){var
+	k='174621729-0',d=document,l=d.location,c=d.cookie;
+	if(l.search.indexOf('utm_expid='+k)>0)return;
+	function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
+	indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
+	length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
+	'<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
+	'://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
+	'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
+	valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
+	'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
+	</script><script>utmx('url','A/B');</script>
+<!-- End of Google Analytics Content Experiment code -->
 
 	</head>
 	<body>
@@ -13,7 +44,7 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon major fa-cloud"></span>
-					<h1>Hi, I'm <strong>Di Wu</strong>.<br />Welcome to my website</h1>
+					<h1>Hi, I'm <strong>Liz Chen</strong>.<br />Welcome to my website :)</h1>
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">Continue</a></li>
 					</ul>
@@ -39,7 +70,7 @@
 
 
 							<span class="image fit"><img src="images/me.jpeg" alt="" /></span>
-							<a href="https://www.dropbox.com/home?preview=Di+Wu_UTD.pdf" target="_blank">
+							<a href="https://www.dropbox.com/s/q2nd8g2qp3hnh06/Liz_Chen.pdf?dl=0" target="_blank">
 								<u><center><h3>Download Resume</h3></center></u>
 							</a>
 						</div>
@@ -48,15 +79,24 @@
 								<h2>About Me</h2>
 							</header>
 							<p>
-								Hi, I am Di Wu. 
+								Hi, this is Liz!
 							</p>
-							<p>I'm a Data Scientist with previous experience in banking industry.
+							<p>I'm a Data Scientist with previous experience in consulting and banking industry.
 								I am passionate to wrestle with complex data and apply machine learning to tell stories
 								and solve business problems.
 							</p>
-						
+							<p>
+								I will soon graduate from my
+								<b><a href="https://www.usfca.edu/arts-sciences/graduate-programs/data-science" target="_blank">Master's of Science in Data Science (MSDS)</a></b>
+								at the University of San Francisco, where I have developed a strong programming
+								and statistics skill set that can tackle business problems involving big data.
+							</p>
 
-						
+							<p>
+								As a Data Scientist at <b><a href="https://www.wiser.com/" target="_blank">Wiser Solution</a></b> , my primary role is to
+								help my client boost revenue and optimize pricing strategy with predictive modeling techniques and machine
+								learning algorithms.
+							</p>
 
 							<p>
 								In the following part, I'd like to share some of my projects I completed so far that I found interesting.
